Updating project to junit 5 + cucumber 7 + allure + java 17+